RESOLVED FIXED167904
Safari pages are blank sometimes (missing tiles)
https://bugs.webkit.org/show_bug.cgi?id=167904
Summary Safari pages are blank sometimes (missing tiles)
Simon Fraser (smfr)
Reported 2017-02-06 13:40:11 PST
Safari pages are blank sometimes (missing tiles)
Attachments
Patch (11.56 KB, patch)
2017-02-06 13:59 PST, Simon Fraser (smfr)
thorton: review+
Simon Fraser (smfr)
Comment 1 2017-02-06 13:59:41 PST
WebKit Commit Bot
Comment 2 2017-02-06 14:01:41 PST
Attachment 300755 [details] did not pass style-queue: ERROR: Source/WebCore/platform/graphics/ca/GraphicsLayerCA.cpp:3571: 'oldLayer' is incorrectly named. It should be named 'protector' or 'protectedLayer'. [readability/naming/protected] [4] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Simon Fraser (smfr)
Comment 3 2017-02-06 15:45:08 PST
*** Bug 167905 has been marked as a duplicate of this bug. ***
Blaze Burg
Comment 4 2017-02-06 16:43:26 PST
Simon Fraser (smfr)
Comment 5 2017-02-06 17:05:29 PST
Simon Fraser (smfr)
Comment 6 2017-02-10 10:26:46 PST
Followup in bug 168127.
Note You need to log in before you can comment on or make changes to this bug.